<resources>
    <string name="menu_name">menu</string>
    <string name="app_name">MARS</string>
    <string name="action_map">Joystick</string>
    <string name="action_jo">Map</string>
    <string name="action_vi">Video stream</string>
    <string name="Buttonmode">Button mode</string>
    <string name="forward">FORWARD</string>
    <string name="back">BACK</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>

</resources>
