<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.siavash.myapplication.MainActivity">

   <item
       android:id="@+id/menu"
       android:title="@string/menu_name"
       android:orderInCategory="100"
       app:showAsAction="always"
       />


    <item
        android:id="@+id/action_map"
        android:orderInCategory="100"
        android:title="@string/action_map"
        android:actionLayout="@color/colorBlue"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/buttonmode"
        android:orderInCategory="100"
        android:title="@string/Buttonmode"
        android:actionLayout="@color/colorBlue"
        app:showAsAction="never"
        />
    <item
    android:id="@+id/action_jo"
    android:orderInCategory="100"
    android:title="@string/action_jo"
    app:showAsAction="never"
        />


    <item
        android:id="@+id/action_vi"
        android:orderInCategory="100"
        android:title="@string/action_vi"
        app:showAsAction="never"/>
</menu>
